--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -1,6 +1,6 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-04-21 11:04:15
+# build time: 2020-04-29 10:15:54
 
 [General]
 bypass-system = true
@@ -51,7 +51,6 @@ DOMAIN-SUFFIX,amazonaws.com,Direct
 DOMAIN-SUFFIX,ameblo.jp,Direct
 DOMAIN-SUFFIX,americanexpress.com,Direct
 DOMAIN-SUFFIX,aol.com,Direct
-DOMAIN-SUFFIX,apple.com,Direct
 DOMAIN-SUFFIX,asos.com,Direct
 DOMAIN-SUFFIX,atlassian.net,Direct
 DOMAIN-SUFFIX,avg.com,Direct
@@ -134,8 +133,6 @@ DOMAIN-SUFFIX,freepik.com,Direct
 DOMAIN-SUFFIX,gearbest.com,Direct
 DOMAIN-SUFFIX,gfycat.com,Direct
 DOMAIN-SUFFIX,giphy.com,Direct
-DOMAIN-SUFFIX,github.com,Direct
-DOMAIN-SUFFIX,github.io,Direct
 DOMAIN-SUFFIX,gizmodo.com,Direct
 DOMAIN-SUFFIX,globo.com,Direct
 DOMAIN-SUFFIX,gmx.net,Direct
@@ -188,7 +185,6 @@ DOMAIN-SUFFIX,leboncoin.fr,Direct
 DOMAIN-SUFFIX,linkedin.com,Direct
 DOMAIN-SUFFIX,liputan6.com,Direct
 DOMAIN-SUFFIX,list-manage.com,Direct
-DOMAIN-SUFFIX,live.com,Direct
 DOMAIN-SUFFIX,livejasmin.com,Direct
 DOMAIN-SUFFIX,livejournal.com,Direct
 DOMAIN-SUFFIX,mail.ru,Direct
@@ -464,6 +460,10 @@ DOMAIN-SUFFIX,gs-loc.apple.com,Proxy
 DOMAIN-SUFFIX,bag.itunes.apple.com,Proxy
 DOMAIN-SUFFIX,apple.news,Proxy
 DOMAIN-SUFFIX,news.iadsdk.apple.com,Proxy
+# 900 mymodified
+DOMAIN-SUFFIX,youtubekids.com,Proxy
+DOMAIN-SUFFIX,wikipedia.org,Proxy
+DOMAIN-SUFFIX,hbo.com,Proxy
 
 
 FINAL,PROXY
