--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -465,7 +465,7 @@ DOMAIN-SUFFIX,youtubekids.com,Proxy
 DOMAIN-SUFFIX,wikipedia.org,Proxy
 DOMAIN-SUFFIX,hbo.com,Proxy
 
-
+GEOIP,CN,DIRECT
 FINAL,PROXY
 
 [URL Rewrite]
