--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -1,12 +1,12 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-04-29 10:15:54
+# build time: 2020-04-29 15:27:22
 
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, e.crashlytics.com, captive.apple.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
-dns-server = system, 114.114.114.114, 112.124.47.27, 8.8.8.8, 8.8.4.4
+dns-server = 8.8.8.8, 114.114.114.114, system
 [Rule]
 #
 # 白名单中包含了境外网站中可以访问的那些，对不确定的网站则尽可能地代理。
@@ -389,6 +389,9 @@ DOMAIN-SUFFIX,cdninstagram.com,Proxy
 #disqus
 DOMAIN-SUFFIX,disquscdn.com,Proxy
 DOMAIN-SUFFIX,gist.github.com,Proxy
+DOMAIN-SUFFIX,github.com,Proxy
+DOMAIN-SUFFIX,github.io,Proxy
+DOMAIN-SUFFIX,githubusercontent.com,Proxy
 # 首页直连，但子域名需翻墙
 DOMAIN-SUFFIX,onedrive.live.com,Proxy
 #20 开车
@@ -464,8 +467,9 @@ DOMAIN-SUFFIX,news.iadsdk.apple.com,Proxy
 DOMAIN-SUFFIX,youtubekids.com,Proxy
 DOMAIN-SUFFIX,wikipedia.org,Proxy
 DOMAIN-SUFFIX,hbo.com,Proxy
+DOMAIN-SUFFIX,docker.com,Proxy
 
-GEOIP,CN,DIRECT
+
 FINAL,PROXY
 
 [URL Rewrite]
