--- a/sr_top500_whitelist_ad.conf
+++ b/sr_top500_whitelist_ad.conf
@@ -1,12 +1,12 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-08-13 07:44:48
+# build time: 2020-08-13 08:15:41
 
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, e.crashlytics.com, captive.apple.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
-dns-server = 1.1.1.1:853,8.8.8.8:853,114.114.114.114,system
+dns-server = 1.1.1.1:853,8.8.8.8:853,114.114.114.114
 [Rule]
 #
 # 白名单中包含了境外网站中可以访问的那些，对不确定的网站则尽可能地代理。
@@ -17,7 +17,7 @@ dns-server = 1.1.1.1:853,8.8.8.8:853,114.114.114.114,system
 #
 
 
-# adblock rules refresh time: 2020-08-13 07:44:47
+# adblock rules refresh time: 2020-08-13 08:15:40
 DOMAIN-SUFFIX,000dn.com,Reject
 DOMAIN-SUFFIX,0024aaaa.com,Reject
 DOMAIN-SUFFIX,003store.com,Reject
