--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -1,12 +1,11 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-08-13 08:15:41
+# build time: 2020-08-27 06:20:55
 
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, e.crashlytics.com, captive.apple.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
-dns-server = tls://1.1.1.1:853,tls://8.8.8.8:853,114.114.114.114
 dns-server = 1.1.1.1:853,8.8.8.8:853,114.114.114.114
 [Rule]
 #
@@ -358,6 +357,8 @@ DOMAIN-SUFFIX,cabdirect.org,Direct
 DOMAIN-SUFFIX,ieee.org,Direct
 DOMAIN-SUFFIX,nature.com,Direct
 DOMAIN-SUFFIX,osapublishing.org,Direct
+DOMAIN-SUFFIX,douyin.com,Direct
+DOMAIN-SUFFIX,douyincdn.com,Direct
 
 
 IP-CIDR,192.168.0.0/16,DIRECT
@@ -467,6 +468,26 @@ DOMAIN-SUFFIX,youtubekids.com,Proxy
 DOMAIN-SUFFIX,wikipedia.org,Proxy
 DOMAIN-SUFFIX,hbo.com,Proxy
 DOMAIN-SUFFIX,docker.com,Proxy
+# apple
+DOMAIN-SUFFIX,ocsp.apple.com,Proxy
+DOMAIN-SUFFIX,digicert.com,Proxy
+DOMAIN-SUFFIX,entrust.net,Proxy
+DOMAIN-SUFFIX,ocsp.verisign.net,Proxy
+DOMAIN-SUFFIX,apps.apple.com,Proxy
+DOMAIN-SUFFIX,itunes.apple.com,Proxy
+DOMAIN-SUFFIX,blobstore.apple.com,Proxy
+DOMAIN-SUFFIX,music.apple.com,Proxy
+DOMAIN-SUFFIX,mzstatic.com,Proxy
+DOMAIN-SUFFIX,itunes.apple.com,Proxy
+DOMAIN-SUFFIX,icloud.com,Proxy
+DOMAIN-SUFFIX,icloud-content.com,Proxy
+DOMAIN-SUFFIX,me.com,Proxy
+DOMAIN-SUFFIX,mzstatic.com,Proxy
+DOMAIN-SUFFIX,akadns.net,Proxy
+DOMAIN-SUFFIX,aaplimg.com,Proxy
+DOMAIN-SUFFIX,cdn-apple.com,Proxy
+DOMAIN-SUFFIX,apple.com,Proxy
+DOMAIN-SUFFIX,apple-cloudkit.com,Proxy
 
 
 FINAL,PROXY
