--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -1,6 +1,6 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-08-27 06:20:55
+# build time: 2020-09-11 04:38:02
 
 [General]
 bypass-system = true
@@ -488,6 +488,10 @@ DOMAIN-SUFFIX,aaplimg.com,Proxy
 DOMAIN-SUFFIX,cdn-apple.com,Proxy
 DOMAIN-SUFFIX,apple.com,Proxy
 DOMAIN-SUFFIX,apple-cloudkit.com,Proxy
+# DNS
+IP-CIDR,8.8.8.8/32,Proxy
+IP-CIDR,8.8.4.4/32,Proxy
+IP-CIDR,1.1.1.1/32,Proxy
 
 
 FINAL,PROXY
