--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -1,12 +1,12 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-09-11 04:38:02
+# build time: 2020-09-24 04:10:23
 
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, e.crashlytics.com, captive.apple.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
-dns-server = 223.5.5.5:853,8.8.8.8:853,1.1.1.1:853
+dns-server = tls://8.8.8.8:853,https://doh.opendns.com/dns-query,https://doh.pub/dns-query,tls://223.5.5.5:853
 [Rule]
 #
 # 白名单中包含了境外网站中可以访问的那些，对不确定的网站则尽可能地代理。
@@ -359,6 +359,19 @@ DOMAIN-SUFFIX,nature.com,Direct
 DOMAIN-SUFFIX,osapublishing.org,Direct
 DOMAIN-SUFFIX,douyin.com,Direct
 DOMAIN-SUFFIX,douyincdn.com,Direct
+# DingTalk
+DOMAIN-SUFFIX,dingtalk.com,Direct
+DOMAIN-SUFFIX,dingtalk.net,Direct
+DOMAIN-SUFFIX,dingtalk.cn,Direct
+DOMAIN-SUFFIX,dingtalkapps.com,Direct
+DOMAIN-SUFFIX,aliyuncs.com,Direct
+DOMAIN-SUFFIX,mxhichina.com,Direct
+DOMAIN-SUFFIX,dingding.xin,Direct
+DOMAIN-SUFFIX,alibabausercontent.com,Direct
+DOMAIN-SUFFIX,dingteam.com,Direct
+# Wechat
+DOMAIN-SUFFIX,matchvs.com,Direct
+DOMAIN-SUFFIX,servicewechat.com,Direct
 
 
 IP-CIDR,192.168.0.0/16,DIRECT
