--- a/sr_cnip_ad.conf
+++ b/sr_cnip_ad.conf
@@ -1,12 +1,12 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-09-24 04:10:23
+# build time: 2020-09-24 16:15:01
 
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, e.crashlytics.com, captive.apple.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
-dns-server = tls://8.8.8.8:853,https://doh.opendns.com/dns-query,https://doh.pub/dns-query,tls://223.5.5.5:853
+dns-server = 223.5.5.5:853,8.8.8.8:853
 [Rule]
 #
 # 国内外划分，对中国网站直连，外国网站代理。
@@ -220,7 +220,7 @@ DOMAIN-SUFFIX,kikibt8.com,Reject
 DOMAIN-SUFFIX,kikibt8.xyz,Reject
 
 
-# adblock rules refresh time: 2020-09-24 04:10:21
+# adblock rules refresh time: 2020-09-24 16:15:00
 DOMAIN-SUFFIX,00-gov.cn,Reject
 DOMAIN-SUFFIX,000dn.com,Reject
 DOMAIN-SUFFIX,0024aaaa.com,Reject
@@ -1998,6 +1998,7 @@ DOMAIN-SUFFIX,arejoysew.com,Reject
 DOMAIN-SUFFIX,arentpremi.space,Reject
 DOMAIN-SUFFIX,arfmdqwyztn.com,Reject
 DOMAIN-SUFFIX,arfttojxv.com,Reject
+DOMAIN-SUFFIX,argetreceden.club,Reject
 DOMAIN-SUFFIX,argggultrji.com,Reject
 DOMAIN-SUFFIX,aribcosw.com,Reject
 DOMAIN-SUFFIX,arisoning.club,Reject
@@ -4985,6 +4986,7 @@ DOMAIN-SUFFIX,familinger.club,Reject
 DOMAIN-SUFFIX,family-joy.com,Reject
 DOMAIN-SUFFIX,famountsuref.site,Reject
 DOMAIN-SUFFIX,fancialeldak.site,Reject
+DOMAIN-SUFFIX,fancialsilveun.club,Reject
 DOMAIN-SUFFIX,fandmo.com,Reject
 DOMAIN-SUFFIX,fangjslc.com,Reject
 DOMAIN-SUFFIX,fanglinwang.cn,Reject
@@ -5195,6 +5197,7 @@ DOMAIN-SUFFIX,fkrisjefbx.com,Reject
 DOMAIN-SUFFIX,fktrlckpmsxx.com,Reject
 DOMAIN-SUFFIX,fkymvojkpdx.com,Reject
 DOMAIN-SUFFIX,flac2flac.xyz,Reject
+DOMAIN-SUFFIX,flatepicbats.com,Reject
 DOMAIN-SUFFIX,flatlyforensics.com,Reject
 DOMAIN-SUFFIX,flexknfp.com,Reject
 DOMAIN-SUFFIX,flipy6sudy.com,Reject
@@ -7765,6 +7768,7 @@ DOMAIN-SUFFIX,koemrbflufm.com,Reject
 DOMAIN-SUFFIX,koesvqwwpmvb.com,Reject
 DOMAIN-SUFFIX,kofcq5.cn,Reject
 DOMAIN-SUFFIX,kohiquor.com,Reject
+DOMAIN-SUFFIX,koimplishing.club,Reject
 DOMAIN-SUFFIX,kojwex.top,Reject
 DOMAIN-SUFFIX,kojywvexdq.com,Reject
 DOMAIN-SUFFIX,kokofits.com,Reject
@@ -8441,6 +8445,7 @@ DOMAIN-SUFFIX,ly5200.cn,Reject
 DOMAIN-SUFFIX,lyaaikspui.com,Reject
 DOMAIN-SUFFIX,lyadu.com,Reject
 DOMAIN-SUFFIX,lyaeccn.com,Reject
+DOMAIN-SUFFIX,lyaustrymich.club,Reject
 DOMAIN-SUFFIX,lybmmxah.com,Reject
 DOMAIN-SUFFIX,lychangxu.cn,Reject
 DOMAIN-SUFFIX,lycnjtuomkpgca.com,Reject
@@ -8604,6 +8609,7 @@ DOMAIN-SUFFIX,mb103.com,Reject
 DOMAIN-SUFFIX,mbcperyc.com,Reject
 DOMAIN-SUFFIX,mbctxigml.com,Reject
 DOMAIN-SUFFIX,mbethnarrowe.info,Reject
+DOMAIN-SUFFIX,mbholicymi.club,Reject
 DOMAIN-SUFFIX,mbid.marfeelrev.com,Reject
 DOMAIN-SUFFIX,mbixofultnnd.com,Reject
 DOMAIN-SUFFIX,mbjb1.girl13.com,Reject
@@ -9136,6 +9142,7 @@ DOMAIN-SUFFIX,nailowhe.net,Reject
 DOMAIN-SUFFIX,nainaimi.top,Reject
 DOMAIN-SUFFIX,naircastlecywr.club,Reject
 DOMAIN-SUFFIX,naiwvizpzflx.com,Reject
+DOMAIN-SUFFIX,najingyi.cn,Reject
 DOMAIN-SUFFIX,najyzdlmqq.com,Reject
 DOMAIN-SUFFIX,nalbusinespr.info,Reject
 DOMAIN-SUFFIX,nalrxmmcs.com,Reject
@@ -12809,6 +12816,7 @@ DOMAIN-SUFFIX,tszritnomuy.com,Reject
 DOMAIN-SUFFIX,tt.biquge.la,Reject
 DOMAIN-SUFFIX,tt123.eastday.com,Reject
 DOMAIN-SUFFIX,ttbc.cc,Reject
+DOMAIN-SUFFIX,ttbc33.com,Reject
 DOMAIN-SUFFIX,ttfgames.cn,Reject
 DOMAIN-SUFFIX,ttgazjzsdotiy.com,Reject
 DOMAIN-SUFFIX,ttgikcpmkpul.com,Reject
@@ -13797,6 +13805,7 @@ DOMAIN-SUFFIX,weinberinaz.site,Reject
 DOMAIN-SUFFIX,weiqiqu.cn,Reject
 DOMAIN-SUFFIX,weixingshexiangji.net,Reject
 DOMAIN-SUFFIX,weixinhuoyuan.com,Reject
+DOMAIN-SUFFIX,weiyajz.cn,Reject
 DOMAIN-SUFFIX,weiziqiang.top,Reject
 DOMAIN-SUFFIX,wel-wel-fie.com,Reject
 DOMAIN-SUFFIX,welllwrite.com,Reject
