--- a/sr_top500_whitelist_ad.conf
+++ b/sr_top500_whitelist_ad.conf
@@ -1,6 +1,6 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-09-24 04:10:23
+# build time: 2020-09-24 16:15:01
 
 [General]
 bypass-system = true
@@ -17,7 +17,7 @@ dns-server = 223.5.5.5:853,8.8.8.8:853
 #
 
 
-# adblock rules refresh time: 2020-09-24 04:10:21
+# adblock rules refresh time: 2020-09-24 16:15:00
 DOMAIN-SUFFIX,00-gov.cn,Reject
 DOMAIN-SUFFIX,000dn.com,Reject
 DOMAIN-SUFFIX,0024aaaa.com,Reject
@@ -1795,6 +1795,7 @@ DOMAIN-SUFFIX,arejoysew.com,Reject
 DOMAIN-SUFFIX,arentpremi.space,Reject
 DOMAIN-SUFFIX,arfmdqwyztn.com,Reject
 DOMAIN-SUFFIX,arfttojxv.com,Reject
+DOMAIN-SUFFIX,argetreceden.club,Reject
 DOMAIN-SUFFIX,argggultrji.com,Reject
 DOMAIN-SUFFIX,aribcosw.com,Reject
 DOMAIN-SUFFIX,arisoning.club,Reject
@@ -4782,6 +4783,7 @@ DOMAIN-SUFFIX,familinger.club,Reject
 DOMAIN-SUFFIX,family-joy.com,Reject
 DOMAIN-SUFFIX,famountsuref.site,Reject
 DOMAIN-SUFFIX,fancialeldak.site,Reject
+DOMAIN-SUFFIX,fancialsilveun.club,Reject
 DOMAIN-SUFFIX,fandmo.com,Reject
 DOMAIN-SUFFIX,fangjslc.com,Reject
 DOMAIN-SUFFIX,fanglinwang.cn,Reject
@@ -4992,6 +4994,7 @@ DOMAIN-SUFFIX,fkrisjefbx.com,Reject
 DOMAIN-SUFFIX,fktrlckpmsxx.com,Reject
 DOMAIN-SUFFIX,fkymvojkpdx.com,Reject
 DOMAIN-SUFFIX,flac2flac.xyz,Reject
+DOMAIN-SUFFIX,flatepicbats.com,Reject
 DOMAIN-SUFFIX,flatlyforensics.com,Reject
 DOMAIN-SUFFIX,flexknfp.com,Reject
 DOMAIN-SUFFIX,flipy6sudy.com,Reject
@@ -7562,6 +7565,7 @@ DOMAIN-SUFFIX,koemrbflufm.com,Reject
 DOMAIN-SUFFIX,koesvqwwpmvb.com,Reject
 DOMAIN-SUFFIX,kofcq5.cn,Reject
 DOMAIN-SUFFIX,kohiquor.com,Reject
+DOMAIN-SUFFIX,koimplishing.club,Reject
 DOMAIN-SUFFIX,kojwex.top,Reject
 DOMAIN-SUFFIX,kojywvexdq.com,Reject
 DOMAIN-SUFFIX,kokofits.com,Reject
@@ -8238,6 +8242,7 @@ DOMAIN-SUFFIX,ly5200.cn,Reject
 DOMAIN-SUFFIX,lyaaikspui.com,Reject
 DOMAIN-SUFFIX,lyadu.com,Reject
 DOMAIN-SUFFIX,lyaeccn.com,Reject
+DOMAIN-SUFFIX,lyaustrymich.club,Reject
 DOMAIN-SUFFIX,lybmmxah.com,Reject
 DOMAIN-SUFFIX,lychangxu.cn,Reject
 DOMAIN-SUFFIX,lycnjtuomkpgca.com,Reject
@@ -8401,6 +8406,7 @@ DOMAIN-SUFFIX,mb103.com,Reject
 DOMAIN-SUFFIX,mbcperyc.com,Reject
 DOMAIN-SUFFIX,mbctxigml.com,Reject
 DOMAIN-SUFFIX,mbethnarrowe.info,Reject
+DOMAIN-SUFFIX,mbholicymi.club,Reject
 DOMAIN-SUFFIX,mbid.marfeelrev.com,Reject
 DOMAIN-SUFFIX,mbixofultnnd.com,Reject
 DOMAIN-SUFFIX,mbjb1.girl13.com,Reject
@@ -8933,6 +8939,7 @@ DOMAIN-SUFFIX,nailowhe.net,Reject
 DOMAIN-SUFFIX,nainaimi.top,Reject
 DOMAIN-SUFFIX,naircastlecywr.club,Reject
 DOMAIN-SUFFIX,naiwvizpzflx.com,Reject
+DOMAIN-SUFFIX,najingyi.cn,Reject
 DOMAIN-SUFFIX,najyzdlmqq.com,Reject
 DOMAIN-SUFFIX,nalbusinespr.info,Reject
 DOMAIN-SUFFIX,nalrxmmcs.com,Reject
@@ -12606,6 +12613,7 @@ DOMAIN-SUFFIX,tszritnomuy.com,Reject
 DOMAIN-SUFFIX,tt.biquge.la,Reject
 DOMAIN-SUFFIX,tt123.eastday.com,Reject
 DOMAIN-SUFFIX,ttbc.cc,Reject
+DOMAIN-SUFFIX,ttbc33.com,Reject
 DOMAIN-SUFFIX,ttfgames.cn,Reject
 DOMAIN-SUFFIX,ttgazjzsdotiy.com,Reject
 DOMAIN-SUFFIX,ttgikcpmkpul.com,Reject
@@ -13594,6 +13602,7 @@ DOMAIN-SUFFIX,weinberinaz.site,Reject
 DOMAIN-SUFFIX,weiqiqu.cn,Reject
 DOMAIN-SUFFIX,weixingshexiangji.net,Reject
 DOMAIN-SUFFIX,weixinhuoyuan.com,Reject
+DOMAIN-SUFFIX,weiyajz.cn,Reject
 DOMAIN-SUFFIX,weiziqiang.top,Reject
 DOMAIN-SUFFIX,wel-wel-fie.com,Reject
 DOMAIN-SUFFIX,welllwrite.com,Reject
@@ -15965,8 +15974,11 @@ DOMAIN-SUFFIX,cabdirect.org,Direct
 DOMAIN-SUFFIX,ieee.org,Direct
 DOMAIN-SUFFIX,nature.com,Direct
 DOMAIN-SUFFIX,osapublishing.org,Direct
+# extended
 DOMAIN-SUFFIX,douyin.com,Direct
 DOMAIN-SUFFIX,douyincdn.com,Direct
+DOMAIN-SUFFIX,meituan.com,Direct
+DOMAIN-SUFFIX,ele.me,Direct
 # DingTalk
 DOMAIN-SUFFIX,dingtalk.com,Direct
 DOMAIN-SUFFIX,dingtalk.net,Direct
@@ -15988,127 +16000,127 @@ IP-CIDR,172.16.0.0/12,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
 
 # 手工定义的 Proxy 列表
-DOMAIN-SUFFIX,theinitium.com,Proxy
-DOMAIN-SUFFIX,youtu.be,Proxy
-DOMAIN-SUFFIX,netflix.com,Proxy
+DOMAIN-SUFFIX,theinitium.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,youtu.be,Proxy,force-remote-dns
+DOMAIN-SUFFIX,netflix.com,Proxy,force-remote-dns
 #161 可能以后会和GFWList重复
-DOMAIN-SUFFIX,9gag.com,Proxy
+DOMAIN-SUFFIX,9gag.com,Proxy,force-remote-dns
 #Telegram
-IP-CIDR,67.198.55.0/24,Proxy
-IP-CIDR,91.108.4.0/22,Proxy
-IP-CIDR,91.108.8.0/22,Proxy
-IP-CIDR,91.108.12.0/22,Proxy
-IP-CIDR,91.108.16.0/22,Proxy
-IP-CIDR,91.108.56.0/22,Proxy
-IP-CIDR,109.239.140.0/24,Proxy
-IP-CIDR,149.154.160.0/20,Proxy
-IP-CIDR,149.154.164.0/22,Proxy
-IP-CIDR,149.154.168.0/22,Proxy
-IP-CIDR,149.154.172.0/22,Proxy
+IP-CIDR,67.198.55.0/24,Proxy,force-remote-dns
+IP-CIDR,91.108.4.0/22,Proxy,force-remote-dns
+IP-CIDR,91.108.8.0/22,Proxy,force-remote-dns
+IP-CIDR,91.108.12.0/22,Proxy,force-remote-dns
+IP-CIDR,91.108.16.0/22,Proxy,force-remote-dns
+IP-CIDR,91.108.56.0/22,Proxy,force-remote-dns
+IP-CIDR,109.239.140.0/24,Proxy,force-remote-dns
+IP-CIDR,149.154.160.0/20,Proxy,force-remote-dns
+IP-CIDR,149.154.164.0/22,Proxy,force-remote-dns
+IP-CIDR,149.154.168.0/22,Proxy,force-remote-dns
+IP-CIDR,149.154.172.0/22,Proxy,force-remote-dns
 #instagram
-DOMAIN-SUFFIX,cdninstagram.com,Proxy
+DOMAIN-SUFFIX,cdninstagram.com,Proxy,force-remote-dns
 #disqus
-DOMAIN-SUFFIX,disquscdn.com,Proxy
-DOMAIN-SUFFIX,gist.github.com,Proxy
-DOMAIN-SUFFIX,github.com,Proxy
-DOMAIN-SUFFIX,github.io,Proxy
-DOMAIN-SUFFIX,githubusercontent.com,Proxy
+DOMAIN-SUFFIX,disquscdn.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gist.github.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,github.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,github.io,Proxy,force-remote-dns
+DOMAIN-SUFFIX,githubusercontent.com,Proxy,force-remote-dns
 # 首页直连，但子域名需翻墙
-DOMAIN-SUFFIX,onedrive.live.com,Proxy
+DOMAIN-SUFFIX,onedrive.live.com,Proxy,force-remote-dns
 #20 开车
-DOMAIN-SUFFIX,t66y.com,Proxy
-DOMAIN-SUFFIX,91porn.com,Proxy
+DOMAIN-SUFFIX,t66y.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,91porn.com,Proxy,force-remote-dns
 #132
-DOMAIN-SUFFIX,feedly.com,Proxy
+DOMAIN-SUFFIX,feedly.com,Proxy,force-remote-dns
 #50 whatsapp
-DOMAIN-SUFFIX,whatsapp.com,Proxy
-DOMAIN-SUFFIX,whatsapp.net,Proxy
-IP-CIDR,18.194.0.0/15,Proxy
-IP-CIDR,34.224.0.0/12,Proxy
+DOMAIN-SUFFIX,whatsapp.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,whatsapp.net,Proxy,force-remote-dns
+IP-CIDR,18.194.0.0/15,Proxy,force-remote-dns
+IP-CIDR,34.224.0.0/12,Proxy,force-remote-dns
 #54 台湾香港澳门 常用网站
-DOMAIN-SUFFIX,ptt.cc,Proxy
-DOMAIN-SUFFIX,mingpaocanada.com,Proxy
-DOMAIN-SUFFIX,mingpao.com,Proxy
-DOMAIN-SUFFIX,appledaily.com,Proxy
-DOMAIN-SUFFIX,appledaily.tw,Proxy
-DOMAIN-SUFFIX,nextmag.com.tw,Proxy
-DOMAIN-SUFFIX,thestandnews.com,Proxy
+DOMAIN-SUFFIX,ptt.cc,Proxy,force-remote-dns
+DOMAIN-SUFFIX,mingpaocanada.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,mingpao.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,appledaily.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,appledaily.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nextmag.com.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,thestandnews.com,Proxy,force-remote-dns
 #60 GMail
 # 手机 smtp 和 imap 需要用到
-DOMAIN-SUFFIX,gmail.com,Proxy
+DOMAIN-SUFFIX,gmail.com,Proxy,force-remote-dns
 #72 #112 Google Voice
-IP-CIDR,74.125.0.0/16,Proxy
+IP-CIDR,74.125.0.0/16,Proxy,force-remote-dns
 #85（可能冗余）
-DOMAIN-SUFFIX,yt3.ggpht.com,Proxy
-DOMAIN-SUFFIX,www-google-analytics.l.google.com,Proxy
-DOMAIN-SUFFIX,ssl-google-analytics.l.google.com,Proxy
-DOMAIN-SUFFIX,partnerad.l.google.com,Proxy
-DOMAIN-SUFFIX,pagead.l.google.com,Proxy
-DOMAIN-SUFFIX,pagead.google.com,Proxy
-DOMAIN-SUFFIX,pagead-tpc.l.google.com,Proxy
-DOMAIN-SUFFIX,mobileads.google.com,Proxy
-DOMAIN-SUFFIX,ads.google.com,Proxy
-DOMAIN-SUFFIX,afd.l.google.com,Proxy
+DOMAIN-SUFFIX,yt3.ggpht.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,www-google-analytics.l.google.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ssl-google-analytics.l.google.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,partnerad.l.google.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pagead.l.google.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pagead.google.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pagead-tpc.l.google.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,mobileads.google.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ads.google.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,afd.l.google.com,Proxy,force-remote-dns
 #175 华尔街邮报
-DOMAIN-SUFFIX,dowjones.com,Proxy
+DOMAIN-SUFFIX,dowjones.com,Proxy,force-remote-dns
 #159
-DOMAIN-SUFFIX,thetvdb.com,Proxy
+DOMAIN-SUFFIX,thetvdb.com,Proxy,force-remote-dns
 #180 OneDrive（可能冗余）
-DOMAIN-SUFFIX,bcbits.com,Proxy
-DOMAIN-SUFFIX,ogma.iad.appboy.com,Proxy
-DOMAIN-SUFFIX,odc.officeapps.live.com,Proxy
-DOMAIN-SUFFIX,skyapi.live.net,Proxy
-DOMAIN-SUFFIX,centralus1.mediap.svc.ms,Proxy
-DOMAIN-SUFFIX,dm.files.1drv.com,Proxy
-DOMAIN-SUFFIX,mobile.pipe.aria.microsoft.com,Proxy
-DOMAIN-SUFFIX,gate.hockeyapp.net,Proxy
-DOMAIN-SUFFIX,skyapi.live.net,Proxy
-DOMAIN-SUFFIX,api.onedrive.com,Proxy
-DOMAIN-SUFFIX,vortex.data.microsoft.com,Proxy
+DOMAIN-SUFFIX,bcbits.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ogma.iad.appboy.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,odc.officeapps.live.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,skyapi.live.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,centralus1.mediap.svc.ms,Proxy,force-remote-dns
+DOMAIN-SUFFIX,dm.files.1drv.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,mobile.pipe.aria.microsoft.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gate.hockeyapp.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,skyapi.live.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,api.onedrive.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,vortex.data.microsoft.com,Proxy,force-remote-dns
 #183
-DOMAIN-SUFFIX,mendeley.com,Proxy
+DOMAIN-SUFFIX,mendeley.com,Proxy,force-remote-dns
 #192 播客收听应用程序 overcast
-DOMAIN-SUFFIX,overcast.fm,Proxy
+DOMAIN-SUFFIX,overcast.fm,Proxy,force-remote-dns
 #205 APPLE NEWS
-DOMAIN-SUFFIX,news-events.apple.com,Proxy
-DOMAIN-SUFFIX,news-edge.apple.com,Proxy
-DOMAIN-SUFFIX,apple.comscoreresearch.com,Proxy
-DOMAIN-SUFFIX,play.itunes.apple.com,Proxy
-DOMAIN-SUFFIX,play-cdn.itunes-apple.com.akadns.net,Proxy
-DOMAIN-SUFFIX,ls.apple.com,Proxy
-DOMAIN-SUFFIX,cvws.apple-dns.net,Proxy
-DOMAIN-SUFFIX,news.apple-dns.net,Proxy
-DOMAIN-SUFFIX,gateway.fe.apple-dns.net,Proxy
-DOMAIN-SUFFIX,akamaiedge.net,Proxy
-DOMAIN-SUFFIX,gs-loc.apple.com,Proxy
-DOMAIN-SUFFIX,bag.itunes.apple.com,Proxy
-DOMAIN-SUFFIX,apple.news,Proxy
-DOMAIN-SUFFIX,news.iadsdk.apple.com,Proxy
+DOMAIN-SUFFIX,news-events.apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,news-edge.apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,apple.comscoreresearch.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,play.itunes.apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,play-cdn.itunes-apple.com.akadns.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ls.apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,cvws.apple-dns.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,news.apple-dns.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gateway.fe.apple-dns.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,akamaiedge.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gs-loc.apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,bag.itunes.apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,apple.news,Proxy,force-remote-dns
+DOMAIN-SUFFIX,news.iadsdk.apple.com,Proxy,force-remote-dns
 # 900 mymodified
-DOMAIN-SUFFIX,youtubekids.com,Proxy
-DOMAIN-SUFFIX,wikipedia.org,Proxy
-DOMAIN-SUFFIX,hbo.com,Proxy
-DOMAIN-SUFFIX,docker.com,Proxy
+DOMAIN-SUFFIX,youtubekids.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,wikipedia.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hbo.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,docker.com,Proxy,force-remote-dns
 # apple
-DOMAIN-SUFFIX,ocsp.apple.com,Proxy
-DOMAIN-SUFFIX,digicert.com,Proxy
-DOMAIN-SUFFIX,entrust.net,Proxy
-DOMAIN-SUFFIX,ocsp.verisign.net,Proxy
-DOMAIN-SUFFIX,apps.apple.com,Proxy
-DOMAIN-SUFFIX,itunes.apple.com,Proxy
-DOMAIN-SUFFIX,blobstore.apple.com,Proxy
-DOMAIN-SUFFIX,music.apple.com,Proxy
-DOMAIN-SUFFIX,mzstatic.com,Proxy
-DOMAIN-SUFFIX,itunes.apple.com,Proxy
-DOMAIN-SUFFIX,icloud.com,Proxy
-DOMAIN-SUFFIX,icloud-content.com,Proxy
-DOMAIN-SUFFIX,me.com,Proxy
-DOMAIN-SUFFIX,mzstatic.com,Proxy
-DOMAIN-SUFFIX,akadns.net,Proxy
-DOMAIN-SUFFIX,aaplimg.com,Proxy
-DOMAIN-SUFFIX,cdn-apple.com,Proxy
-DOMAIN-SUFFIX,apple.com,Proxy
-DOMAIN-SUFFIX,apple-cloudkit.com,Proxy
+DOMAIN-SUFFIX,ocsp.apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,digicert.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,entrust.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ocsp.verisign.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,apps.apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,itunes.apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,blobstore.apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,music.apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,mzstatic.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,itunes.apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,icloud.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,icloud-content.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,me.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,mzstatic.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,akadns.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,aaplimg.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,cdn-apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,apple.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,apple-cloudkit.com,Proxy,force-remote-dns
 
 
 FINAL,PROXY
