--- a/sr_top500_banlist.conf
+++ b/sr_top500_banlist.conf
@@ -1,6 +1,6 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-09-24 16:15:01
+# build time: 2020-11-10 05:13:03
 
 [General]
 bypass-system = true
@@ -229,6 +229,7 @@ DOMAIN-SUFFIX,alhayat.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,alicejapan.co.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,aliengu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,alkasir.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,all4mom.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,allcoin.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,allconnected.co,Proxy,force-remote-dns
 DOMAIN-SUFFIX,alldrawnsex.com,Proxy,force-remote-dns
@@ -737,6 +738,7 @@ DOMAIN-SUFFIX,cam4.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cam4.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cam4.sg,Proxy,force-remote-dns
 DOMAIN-SUFFIX,camfrog.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,campaignforuyghurs.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cams.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cams.org.sg,Proxy,force-remote-dns
 DOMAIN-SUFFIX,canadameet.com,Proxy,force-remote-dns
@@ -1726,6 +1728,7 @@ DOMAIN-SUFFIX,freefuckvids.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freegao.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freehongkong.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freeilhamtohti.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,freekazakhs.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freekwonpyong.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freelotto.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freeman2.com,Proxy,force-remote-dns
@@ -1922,6 +1925,7 @@ DOMAIN-SUFFIX,gmll.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gmodules.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gmozomg.izihost.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gnci.org.hk,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gnews.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,go-pki.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,go.nesnode.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,go141.com,Proxy,force-remote-dns
@@ -2088,6 +2092,7 @@ DOMAIN-SUFFIX,gsp.target.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gstatic.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gtricks.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gts-vpn.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gtv.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gu-chu-sum.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,guaguass.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,guaguass.org,Proxy,force-remote-dns
@@ -2165,6 +2170,7 @@ DOMAIN-SUFFIX,help.linksalpha.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,helpeachpeople.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,helplinfen.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,helpster.de,Proxy,force-remote-dns
+DOMAIN-SUFFIX,helpuyghursnow.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,helpzhuling.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hentai.to,Proxy,force-remote-dns
 DOMAIN-SUFFIX,hentaitube.tv,Proxy,force-remote-dns
@@ -2426,6 +2432,7 @@ DOMAIN-SUFFIX,iicns.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iipdigital.usembassy.gov,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ikstar.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ikwb.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ilhamtohtiinstitute.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,illusionfactory.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ilove80.be,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ilovelongtoes.com,Proxy,force-remote-dns
@@ -3006,6 +3013,7 @@ DOMAIN-SUFFIX,mimiai.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mimivip.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mimivv.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mindrolling.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,mingdemedia.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,minghui-a.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,minghui-b.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,minghui-school.org,Proxy,force-remote-dns
@@ -3832,6 +3840,7 @@ DOMAIN-SUFFIX,renminbao.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,renyurenquan.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,research.jmsc.hku.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,resilio.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,resistchina.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,retweeteffect.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,retweetist.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,retweetrank.com,Proxy,force-remote-dns
@@ -4206,6 +4215,7 @@ DOMAIN-SUFFIX,sstmlt.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stackoverflow.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stage64.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,standupfortibet.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,standwithhk.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,stanford.edu,Proxy,force-remote-dns
 DOMAIN-SUFFIX,starfishfx.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,starp2p.com,Proxy,force-remote-dns
@@ -4465,7 +4475,6 @@ DOMAIN-SUFFIX,tianzhu.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibet-envoy.eu,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibet-foundation.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibet-house-trust.co.uk,Proxy,force-remote-dns
-DOMAIN-SUFFIX,tibet-info.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibet-initiative.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibet-munich.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibet.a.se,Proxy,force-remote-dns
@@ -4680,6 +4689,7 @@ DOMAIN-SUFFIX,turansam.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,turbobit.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,turbohide.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,turbotwitter.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,turkistantimes.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,turntable.fm,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tushycash.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tuvpn.com,Proxy,force-remote-dns
