--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -1,6 +1,6 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-09-24 16:15:01
+# build time: 2020-11-10 05:13:03
 
 [General]
 bypass-system = true
@@ -361,6 +361,7 @@ DOMAIN-SUFFIX,osapublishing.org,Direct
 DOMAIN-SUFFIX,douyin.com,Direct
 DOMAIN-SUFFIX,douyincdn.com,Direct
 DOMAIN-SUFFIX,meituan.com,Direct
+DOMAIN-SUFFIX,meituan.net,Direct
 DOMAIN-SUFFIX,ele.me,Direct
 # DingTalk
 DOMAIN-SUFFIX,dingtalk.com,Direct
