--- a/sr_top500_banlist.conf
+++ b/sr_top500_banlist.conf
@@ -1,6 +1,6 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-11-10 05:13:03
+# build time: 2020-11-17 11:13:56
 
 [General]
 bypass-system = true
@@ -3510,6 +3510,7 @@ DOMAIN-SUFFIX,paperb.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,paradisehill.cc,Proxy,force-remote-dns
 DOMAIN-SUFFIX,paradisepoker.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,parkansky.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,parler.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,parsevideo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,partycasino.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,partypoker.com,Proxy,force-remote-dns
