--- a/sr_top500_banlist.conf
+++ b/sr_top500_banlist.conf
@@ -1,6 +1,6 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-11-17 11:13:56
+# build time: 2020-12-07 06:25:53
 
 [General]
 bypass-system = true
@@ -323,7 +323,7 @@ DOMAIN-SUFFIX,apiary.io,Proxy,force-remote-dns
 DOMAIN-SUFFIX,apidocs.linksalpha.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,apigee.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,apk-dl.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,apkdler.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,apkcombo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,apkmirror.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,apkmonk.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,apkplz.com,Proxy,force-remote-dns
@@ -581,7 +581,6 @@ DOMAIN-SUFFIX,blog.foolsmountain.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blog.fuckgfw233.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blog.goo.ne.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blog.google,Proxy,force-remote-dns
-DOMAIN-SUFFIX,blog.inoreader.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blog.istef.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blog.jackjia.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blog.jp,Proxy,force-remote-dns
@@ -2471,6 +2470,7 @@ DOMAIN-SUFFIX,initiativesforchina.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,inkui.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,inmediahk.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,innermongolia.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,inoreader.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,inote.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,insecam.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,insidevoa.com,Proxy,force-remote-dns
