--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -1,6 +1,6 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-11-17 11:13:56
+# build time: 2020-12-07 06:25:53
 
 [General]
 bypass-system = true
@@ -365,6 +365,8 @@ DOMAIN-SUFFIX,meituan.net,Direct
 DOMAIN-SUFFIX,ele.me,Direct
 DOMAIN-SUFFIX,xhscdn.com,Direct
 DOMAIN-SUFFIX,xiaohongshu.com,Direct
+DOMAIN-SUFFIX,udacity.com,Direct
+DOMAIN-SUFFIX,shanghaidisneyresort.com,Direct
 # DingTalk
 DOMAIN-SUFFIX,dingtalk.com,Direct
 DOMAIN-SUFFIX,dingtalk.net,Direct
