removed icloud from proxy

--- a/sr_direct_banad.conf
+++ b/sr_direct_banad.conf
@@ -1,6 +1,6 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-12-07 06:25:53
+# build time: 2020-12-08 13:49:59
 
 [General]
 bypass-system = true
@@ -216,7 +216,7 @@ DOMAIN-SUFFIX,kikibt8.com,Reject
 DOMAIN-SUFFIX,kikibt8.xyz,Reject
 
 
-# adblock rules refresh time: 2020-12-07 06:25:50
+# adblock rules refresh time: 2020-12-08 13:49:54
 DOMAIN-SUFFIX,00-gov.cn,Reject
 DOMAIN-SUFFIX,000dn.com,Reject
 DOMAIN-SUFFIX,0024aaaa.com,Reject
@@ -476,6 +476,7 @@ DOMAIN-SUFFIX,15fa37b45d.com,Reject
 IP-CIDR,162.209.213.66/32,Reject
 IP-CIDR,163.197.136.33/32,Reject
 IP-CIDR,164.155.185.254/32,Reject
+DOMAIN-SUFFIX,16482f75cb.com,Reject
 DOMAIN-SUFFIX,16577716.com,Reject
 DOMAIN-SUFFIX,165a7c15380874ef3.com,Reject
 IP-CIDR,167.206.10.148/32,Reject
@@ -1332,6 +1333,7 @@ DOMAIN-SUFFIX,9egiyiyt1o18.com,Reject
 DOMAIN-SUFFIX,9f38cd012c83.com,Reject
 DOMAIN-SUFFIX,9fcbacf708f2.com,Reject
 DOMAIN-SUFFIX,9h6qq.cn,Reject
+DOMAIN-SUFFIX,9kanw.com,Reject
 DOMAIN-SUFFIX,9kff.com,Reject
 DOMAIN-SUFFIX,9ksj.xyz,Reject
 DOMAIN-SUFFIX,9nwg9sib9e.com,Reject
@@ -2074,6 +2076,7 @@ DOMAIN-SUFFIX,andmejs.com,Reject
 DOMAIN-SUFFIX,andorranisas.xyz,Reject
 DOMAIN-SUFFIX,andvqrqaeu.com,Reject
 DOMAIN-SUFFIX,anelexpres.club,Reject
+DOMAIN-SUFFIX,anerqdd.ga,Reject
 DOMAIN-SUFFIX,anews7.nvwu.com,Reject
 DOMAIN-SUFFIX,anglended.club,Reject
 DOMAIN-SUFFIX,anglishreasts.site,Reject
@@ -2172,6 +2175,7 @@ DOMAIN-SUFFIX,aqpjyujihpbggj.com,Reject
 DOMAIN-SUFFIX,aqrprjdqogzghb.com,Reject
 DOMAIN-SUFFIX,aquarius8.cn,Reject
 DOMAIN-SUFFIX,aqugame.com,Reject
+DOMAIN-SUFFIX,aqvnurq.cn,Reject
 DOMAIN-SUFFIX,aqyuxcnsbfhuia.com,Reject
 DOMAIN-SUFFIX,arableredressalacrity.com,Reject
 DOMAIN-SUFFIX,arana.pw,Reject
@@ -2812,6 +2816,7 @@ DOMAIN-SUFFIX,bingooverdosegroom.com,Reject
 DOMAIN-SUFFIX,bingtonwr.top,Reject
 DOMAIN-SUFFIX,bingyinq.com,Reject
 DOMAIN-SUFFIX,binsatbee.club,Reject
+DOMAIN-SUFFIX,bio-lifehealth.com,Reject
 DOMAIN-SUFFIX,biochempop.com,Reject
 DOMAIN-SUFFIX,bipwrite.com,Reject
 DOMAIN-SUFFIX,biroads.com,Reject
@@ -2903,6 +2908,7 @@ DOMAIN-SUFFIX,bmdjnvorps.com,Reject
 DOMAIN-SUFFIX,bmgan.com,Reject
 DOMAIN-SUFFIX,bmjpxyrpiyq.com,Reject
 DOMAIN-SUFFIX,bmkz57b79pxk.com,Reject
+DOMAIN-SUFFIX,bmp.ovh,Reject
 DOMAIN-SUFFIX,bmuju.com,Reject
 DOMAIN-SUFFIX,bmvjnewxkyi.com,Reject
 DOMAIN-SUFFIX,bmwzdfrra.com,Reject
@@ -3068,6 +3074,7 @@ DOMAIN-SUFFIX,buglethemfouls.casa,Reject
 DOMAIN-SUFFIX,buhatfjrk9dje10eme.com,Reject
 DOMAIN-SUFFIX,buildhoodpip.club,Reject
 DOMAIN-SUFFIX,bulankk.com,Reject
+DOMAIN-SUFFIX,bulbsanctify.com,Reject
 DOMAIN-SUFFIX,bulkeach.com,Reject
 DOMAIN-SUFFIX,bullads.net,Reject
 DOMAIN-SUFFIX,bulldogdemocracy.com,Reject
@@ -3833,6 +3840,7 @@ DOMAIN-SUFFIX,cpm.amateurcommunity.de,Reject
 DOMAIN-SUFFIX,cpm.cm.kankan.com,Reject
 DOMAIN-SUFFIX,cpm.cm.sandai.net,Reject
 DOMAIN-SUFFIX,cpm360.com,Reject
+DOMAIN-SUFFIX,cpmdlmgfwy.com,Reject
 DOMAIN-SUFFIX,cpmgatenetwork.com,Reject
 DOMAIN-SUFFIX,cpmnetworkcontent.com,Reject
 DOMAIN-SUFFIX,cpmprofitablecontent.com,Reject
@@ -4167,6 +4175,7 @@ DOMAIN-SUFFIX,d347nuc6bd1dvs.cloudfront.net,Reject
 DOMAIN-SUFFIX,d34rdvn2ky3gnm.cloudfront.net,Reject
 DOMAIN-SUFFIX,d355vwft2pa8h6.cloudfront.net,Reject
 DOMAIN-SUFFIX,d359wjs9dpy12d.cloudfront.net,Reject
+DOMAIN-SUFFIX,d36gyu.cn,Reject
 DOMAIN-SUFFIX,d36zfztxfflmqo.cloudfront.net,Reject
 DOMAIN-SUFFIX,d37abonb6ucrhx.cloudfront.net,Reject
 DOMAIN-SUFFIX,d38itq6vdv6gr9.cloudfront.net,Reject
@@ -4433,6 +4442,7 @@ DOMAIN-SUFFIX,del-del-ete.com,Reject
 DOMAIN-SUFFIX,delainlygoverhe.info,Reject
 DOMAIN-SUFFIX,delayedtemporarilybakery.com,Reject
 DOMAIN-SUFFIX,deliberateporridge.com,Reject
+DOMAIN-SUFFIX,delightfulold.com,Reject
 DOMAIN-SUFFIX,deliver.ifeng.com,Reject
 DOMAIN-SUFFIX,delivery-dev.thebloggernetwork.com,Reject
 DOMAIN-SUFFIX,delivery.playallvideos.com,Reject
@@ -4461,6 +4471,7 @@ DOMAIN-SUFFIX,deparabides.club,Reject
 DOMAIN-SUFFIX,depictlicencegrandmother.com,Reject
 DOMAIN-SUFFIX,depicturalki.club,Reject
 DOMAIN-SUFFIX,depleastpo.club,Reject
+DOMAIN-SUFFIX,depotshine.com,Reject
 DOMAIN-SUFFIX,deprivationzomby.com,Reject
 DOMAIN-SUFFIX,derbodilehe.top,Reject
 DOMAIN-SUFFIX,derliesnot.club,Reject
@@ -4898,6 +4909,7 @@ DOMAIN-SUFFIX,dustycondition.com,Reject
 DOMAIN-SUFFIX,dutinf.com,Reject
 DOMAIN-SUFFIX,duusuu.com,Reject
 DOMAIN-SUFFIX,duwomuonxosyjf.com,Reject
+DOMAIN-SUFFIX,duwowvo.cn,Reject
 DOMAIN-SUFFIX,duxumpou.com,Reject
 DOMAIN-SUFFIX,duzakergeex.com,Reject
 DOMAIN-SUFFIX,duzt6rhr7wo8p.cloudfront.net,Reject
@@ -5109,6 +5121,7 @@ DOMAIN-SUFFIX,eeghegak.com,Reject
 DOMAIN-SUFFIX,eegjpwmi.com,Reject
 DOMAIN-SUFFIX,eegputuwclsvo.com,Reject
 DOMAIN-SUFFIX,eekkanwe.com,Reject
+DOMAIN-SUFFIX,eelfadechi.com,Reject
 DOMAIN-SUFFIX,eelsouph.click,Reject
 DOMAIN-SUFFIX,eeltaung.com,Reject
 DOMAIN-SUFFIX,eenbryfjg.com,Reject
@@ -5622,6 +5635,7 @@ DOMAIN-SUFFIX,fa00c331ceacc.com,Reject
 DOMAIN-SUFFIX,faayojxf.com,Reject
 DOMAIN-SUFFIX,facebookma.cn,Reject
 DOMAIN-SUFFIX,facebruek.online,Reject
+DOMAIN-SUFFIX,faceearlobe.com,Reject
 DOMAIN-SUFFIX,facetexamgrabbed.com,Reject
 DOMAIN-SUFFIX,faciliatestudied.com,Reject
 DOMAIN-SUFFIX,facilitategovernor.com,Reject
@@ -5646,6 +5660,7 @@ DOMAIN-SUFFIX,fagmomqua.site,Reject
 DOMAIN-SUFFIX,fahimpace.pro,Reject
 DOMAIN-SUFFIX,faigroas.net,Reject
 DOMAIN-SUFFIX,faindianship.club,Reject
+DOMAIN-SUFFIX,fairieflame.com,Reject
 DOMAIN-SUFFIX,fairnessels.com,Reject
 DOMAIN-SUFFIX,fairnessenhancedisposal.com,Reject
 DOMAIN-SUFFIX,fairyceiling.com,Reject
@@ -5895,6 +5910,7 @@ DOMAIN-SUFFIX,flatlyforensics.com,Reject
 DOMAIN-SUFFIX,fleckspoken.com,Reject
 DOMAIN-SUFFIX,flexknfp.com,Reject
 DOMAIN-SUFFIX,flipy6sudy.com,Reject
+DOMAIN-SUFFIX,flixcontentshop.com,Reject
 DOMAIN-SUFFIX,fll007.com,Reject
 DOMAIN-SUFFIX,flloczhqdkn.com,Reject
 DOMAIN-SUFFIX,flmuqa.com,Reject
@@ -6022,6 +6038,7 @@ DOMAIN-SUFFIX,freakspybad.com,Reject
 DOMAIN-SUFFIX,free-cdn.oss-cn-shanghai.aliyuncs.com,Reject
 DOMAIN-SUFFIX,freeevpn.info,Reject
 DOMAIN-SUFFIX,freementgd.club,Reject
+DOMAIN-SUFFIX,frees2020.com,Reject
 DOMAIN-SUFFIX,freesoftforever.com,Reject
 DOMAIN-SUFFIX,freexxxvideoclip.aebn.net,Reject
 DOMAIN-SUFFIX,frenchayan.club,Reject
@@ -6246,6 +6263,7 @@ DOMAIN-SUFFIX,garo-garo-osh.com,Reject
 DOMAIN-SUFFIX,garowrite.com,Reject
 DOMAIN-SUFFIX,gashot.yurivideos.com,Reject
 DOMAIN-SUFFIX,gasxf.com,Reject
+DOMAIN-SUFFIX,gatesrichestbusts.com,Reject
 DOMAIN-SUFFIX,gatetocontent.com,Reject
 DOMAIN-SUFFIX,gateway.fortunelounge.com,Reject
 DOMAIN-SUFFIX,gateways.s3.amazonaws.com,Reject
@@ -6706,6 +6724,7 @@ DOMAIN-SUFFIX,guemechan.top,Reject
 DOMAIN-SUFFIX,gueqndbe.com,Reject
 DOMAIN-SUFFIX,gueselambe.club,Reject
 DOMAIN-SUFFIX,guess.h.qhimg.com,Reject
+DOMAIN-SUFFIX,guffawdecipher.com,Reject
 DOMAIN-SUFFIX,gugemfslzh.com,Reject
 DOMAIN-SUFFIX,guhpyglt.com,Reject
 DOMAIN-SUFFIX,guidashu.com,Reject
@@ -6919,6 +6938,7 @@ DOMAIN-SUFFIX,hcmjlsxhebb.com,Reject
 DOMAIN-SUFFIX,hcprzx.cn,Reject
 DOMAIN-SUFFIX,hcrwnoaqe.com,Reject
 DOMAIN-SUFFIX,hcskwstr.com,Reject
+DOMAIN-SUFFIX,hcwaxejunyzvxt.com,Reject
 DOMAIN-SUFFIX,hcwdcintgl.com,Reject
 DOMAIN-SUFFIX,hcwljy.com,Reject
 DOMAIN-SUFFIX,hdacode.com,Reject
@@ -7052,6 +7072,7 @@ DOMAIN-SUFFIX,highwayprinting.com,Reject
 DOMAIN-SUFFIX,higoo4.com,Reject
 DOMAIN-SUFFIX,hihifenxiang.com,Reject
 DOMAIN-SUFFIX,hikvar.ru,Reject
+DOMAIN-SUFFIX,hikyceti.pro,Reject
 DOMAIN-SUFFIX,hilltopgo.com,Reject
 DOMAIN-SUFFIX,himekingrow.com,Reject
 DOMAIN-SUFFIX,himizoli.pro,Reject
@@ -7059,6 +7080,7 @@ DOMAIN-SUFFIX,himselvepostly.site,Reject
 DOMAIN-SUFFIX,himselveseg.club,Reject
 DOMAIN-SUFFIX,himselvesobr.club,Reject
 DOMAIN-SUFFIX,himselvethe.info,Reject
+DOMAIN-SUFFIX,hinalwritis.fun,Reject
 DOMAIN-SUFFIX,hinatorhypoc.top,Reject
 DOMAIN-SUFFIX,hincludingse.site,Reject
 DOMAIN-SUFFIX,hinesdenien.club,Reject
@@ -8195,6 +8217,7 @@ DOMAIN-SUFFIX,joophesh.com,Reject
 DOMAIN-SUFFIX,joredi.com,Reject
 DOMAIN-SUFFIX,joredii.com,Reject
 DOMAIN-SUFFIX,jorsdbphuyng.com,Reject
+DOMAIN-SUFFIX,josephcalculatedsewer.com,Reject
 DOMAIN-SUFFIX,jossuer.net,Reject
 DOMAIN-SUFFIX,josxzdszqaivb.com,Reject
 DOMAIN-SUFFIX,jotpybmcjvg.com,Reject
@@ -9643,6 +9666,7 @@ DOMAIN-SUFFIX,melo.space,Reject
 DOMAIN-SUFFIX,melohxphr.com,Reject
 DOMAIN-SUFFIX,membergo.club,Reject
 DOMAIN-SUFFIX,memodiketryout.com,Reject
+DOMAIN-SUFFIX,memorableordealstranger.com,Reject
 DOMAIN-SUFFIX,memoralegil.site,Reject
 DOMAIN-SUFFIX,memsyndazra.com,Reject
 DOMAIN-SUFFIX,menagexbqhxf.com,Reject
@@ -9936,6 +9960,7 @@ DOMAIN-SUFFIX,mountain.zhidao.baidu.com,Reject
 DOMAIN-SUFFIX,moutaihotel.cn,Reject
 DOMAIN-SUFFIX,mouuhrprxixwrw.com,Reject
 DOMAIN-SUFFIX,moveadrenaline.com,Reject
+DOMAIN-SUFFIX,movfull.com,Reject
 DOMAIN-SUFFIX,movie-pass.club,Reject
 DOMAIN-SUFFIX,movie-pass.live,Reject
 DOMAIN-SUFFIX,moviemediahub.com,Reject
@@ -9943,6 +9968,7 @@ DOMAIN-SUFFIX,moviesflix4k.info,Reject
 DOMAIN-SUFFIX,moviesteward.com,Reject
 DOMAIN-SUFFIX,moviestreamingonline.club,Reject
 DOMAIN-SUFFIX,movii-loft.cn,Reject
+DOMAIN-SUFFIX,mowehrxikxhr.com,Reject
 DOMAIN-SUFFIX,mowyappedbibs.com,Reject
 DOMAIN-SUFFIX,moxiaoyang.top,Reject
 DOMAIN-SUFFIX,mozgvya.com,Reject
@@ -10235,6 +10261,7 @@ DOMAIN-SUFFIX,ndtzx.com,Reject
 DOMAIN-SUFFIX,nduop.com,Reject
 DOMAIN-SUFFIX,ndusa.cn,Reject
 DOMAIN-SUFFIX,ne9377.com,Reject
+DOMAIN-SUFFIX,neathsmik.top,Reject
 DOMAIN-SUFFIX,nebadu.com,Reject
 DOMAIN-SUFFIX,neddifficec.club,Reject
 DOMAIN-SUFFIX,nedinchestw.site,Reject
@@ -10297,6 +10324,7 @@ DOMAIN-SUFFIX,newsunads.com,Reject
 DOMAIN-SUFFIX,newthuads.com,Reject
 DOMAIN-SUFFIX,newvideos.xyz,Reject
 DOMAIN-SUFFIX,newyiba.top,Reject
+DOMAIN-SUFFIX,neyhdjwpumivpa.com,Reject
 DOMAIN-SUFFIX,nfanxxuegzp.com,Reject
 DOMAIN-SUFFIX,nfarmerlycompa.info,Reject
 DOMAIN-SUFFIX,nfbpdwso.com,Reject
@@ -10474,6 +10502,7 @@ DOMAIN-SUFFIX,noqj1iz4u28t.com,Reject
 DOMAIN-SUFFIX,norakseemlyntr.info,Reject
 DOMAIN-SUFFIX,normugtog.com,Reject
 DOMAIN-SUFFIX,nornelis.pw,Reject
+DOMAIN-SUFFIX,nortaumi.net,Reject
 DOMAIN-SUFFIX,northeregikgf.club,Reject
 DOMAIN-SUFFIX,northernintimate.com,Reject
 DOMAIN-SUFFIX,northinmatedepression.com,Reject
@@ -10486,6 +10515,7 @@ DOMAIN-SUFFIX,nostromedia.com,Reject
 DOMAIN-SUFFIX,notchchatterboxdoor.com,Reject
 DOMAIN-SUFFIX,notchcollectormuffin.com,Reject
 DOMAIN-SUFFIX,notestscredi.club,Reject
+DOMAIN-SUFFIX,notheredef.fun,Reject
 DOMAIN-SUFFIX,nothickner.club,Reject
 DOMAIN-SUFFIX,nothingarbourdough.com,Reject
 DOMAIN-SUFFIX,notice.uchome.manyou.com,Reject
@@ -10931,6 +10961,7 @@ DOMAIN-SUFFIX,onwaysebuj.site,Reject
 DOMAIN-SUFFIX,onxxyeoyes.com,Reject
 DOMAIN-SUFFIX,onysociate.club,Reject
 DOMAIN-SUFFIX,oo5548q.top,Reject
+DOMAIN-SUFFIX,oodsauns.net,Reject
 DOMAIN-SUFFIX,oojthlwtlu.com,Reject
 DOMAIN-SUFFIX,ookedapp.club,Reject
 DOMAIN-SUFFIX,ookiqhfioldxwj.com,Reject
@@ -11210,6 +11241,7 @@ DOMAIN-SUFFIX,parpapsit.com,Reject
 DOMAIN-SUFFIX,parsruingmeld.com,Reject
 DOMAIN-SUFFIX,particlesmanuscript.com,Reject
 DOMAIN-SUFFIX,particularmadam.com,Reject
+DOMAIN-SUFFIX,partitiondetergenttumor.com,Reject
 DOMAIN-SUFFIX,partner.bargaindomains.com,Reject
 DOMAIN-SUFFIX,partner.premiumdomains.com,Reject
 DOMAIN-SUFFIX,partner.toutiao.com,Reject
@@ -11464,6 +11496,7 @@ DOMAIN-SUFFIX,pkytbidauolavq.com,Reject
 DOMAIN-SUFFIX,pkyxdwj.cn,Reject
 DOMAIN-SUFFIX,plainlycradlescalp.com,Reject
 DOMAIN-SUFFIX,plaintiffalphabetslacken.com,Reject
+DOMAIN-SUFFIX,plantationthrillednoncommittal.com,Reject
 DOMAIN-SUFFIX,plasminori.club,Reject
 DOMAIN-SUFFIX,platado.com,Reject
 DOMAIN-SUFFIX,plathwardsve.site,Reject
@@ -11531,6 +11564,7 @@ DOMAIN-SUFFIX,pointexcusestretching.com,Reject
 DOMAIN-SUFFIX,pointpopu.top,Reject
 DOMAIN-SUFFIX,poke88.com,Reject
 DOMAIN-SUFFIX,poleonaryprac.info,Reject
+DOMAIN-SUFFIX,policemanciderpeeks.com,Reject
 DOMAIN-SUFFIX,polishshinyspectacles.com,Reject
 DOMAIN-SUFFIX,polituremil.club,Reject
 DOMAIN-SUFFIX,polkoa.com,Reject
@@ -11555,6 +11589,7 @@ DOMAIN-SUFFIX,poratav.com,Reject
 DOMAIN-SUFFIX,poratedp.top,Reject
 DOMAIN-SUFFIX,porchiteds.club,Reject
 DOMAIN-SUFFIX,poredii.com,Reject
+DOMAIN-SUFFIX,poresresigntun.com,Reject
 DOMAIN-SUFFIX,portedlysarcatc.info,Reject
 DOMAIN-SUFFIX,portlytinytimeout.com,Reject
 DOMAIN-SUFFIX,pos.baidu.com,Reject
@@ -12357,6 +12392,7 @@ DOMAIN-SUFFIX,realleguasse.xyz,Reject
 DOMAIN-SUFFIX,realmpallduns.com,Reject
 DOMAIN-SUFFIX,realsrv.com,Reject
 DOMAIN-SUFFIX,realtime-bid.com,Reject
+DOMAIN-SUFFIX,rearrangeapostrophemargarita.com,Reject
 DOMAIN-SUFFIX,reasonalattracke.info,Reject
 DOMAIN-SUFFIX,reasonzoodeport.com,Reject
 DOMAIN-SUFFIX,rebdy.com,Reject
@@ -12421,6 +12457,7 @@ DOMAIN-SUFFIX,rekodpro.com,Reject
 DOMAIN-SUFFIX,relaxingovercomeexaggerate.com,Reject
 DOMAIN-SUFFIX,relaxspace.com.cn,Reject
 DOMAIN-SUFFIX,releasurezesa.site,Reject
+DOMAIN-SUFFIX,relevantairbornefantastic.com,Reject
 DOMAIN-SUFFIX,reliancehamlet.com,Reject
 DOMAIN-SUFFIX,reliancevalve.com,Reject
 DOMAIN-SUFFIX,reljjhhppxmv.com,Reject
@@ -13330,6 +13367,7 @@ DOMAIN-SUFFIX,skyttt.com,Reject
 DOMAIN-SUFFIX,skywinners.com.cn,Reject
 DOMAIN-SUFFIX,sl1me.com,Reject
 DOMAIN-SUFFIX,slabshookwasted.com,Reject
+DOMAIN-SUFFIX,slashstar.net,Reject
 DOMAIN-SUFFIX,slaveforgetfulsneak.com,Reject
 DOMAIN-SUFFIX,slavesfraudulent.com,Reject
 DOMAIN-SUFFIX,slectrumclarat.fun,Reject
@@ -13355,6 +13393,7 @@ DOMAIN-SUFFIX,sm077.com,Reject
 DOMAIN-SUFFIX,smallentpation.pro,Reject
 DOMAIN-SUFFIX,smallmovieapp.com,Reject
 DOMAIN-SUFFIX,smallvideoapp.com,Reject
+DOMAIN-SUFFIX,smart-start.com.cn,Reject
 DOMAIN-SUFFIX,smart.styria-digital.com,Reject
 DOMAIN-SUFFIX,smart2cnjuh34jb.com,Reject
 DOMAIN-SUFFIX,smartfarming.cn,Reject
@@ -13903,6 +13942,7 @@ DOMAIN-SUFFIX,tasterdayuns.top,Reject
 DOMAIN-SUFFIX,tatahn.com,Reject
 DOMAIN-SUFFIX,tatdunsit.com,Reject
 DOMAIN-SUFFIX,tathitch.net,Reject
+DOMAIN-SUFFIX,tatjhh.cn,Reject
 DOMAIN-SUFFIX,taveredezeri.site,Reject
 DOMAIN-SUFFIX,tbaia.com,Reject
 DOMAIN-SUFFIX,tbaocdn.com,Reject
@@ -14073,6 +14113,7 @@ DOMAIN-SUFFIX,thoutiquede.club,Reject
 DOMAIN-SUFFIX,thqwivyhdpoem.com,Reject
 DOMAIN-SUFFIX,throughhonouredhighest.com,Reject
 DOMAIN-SUFFIX,thterras.com,Reject
+DOMAIN-SUFFIX,thughighjackcheesy.com,Reject
 DOMAIN-SUFFIX,thugtowardhindsight.com,Reject
 DOMAIN-SUFFIX,thuneagjhnvlg.com,Reject
 DOMAIN-SUFFIX,thuniveryra.club,Reject
@@ -14925,6 +14966,7 @@ DOMAIN-SUFFIX,vanenow.com,Reject
 DOMAIN-SUFFIX,vaneplusnod.com,Reject
 DOMAIN-SUFFIX,vanssueshyer.casa,Reject
 DOMAIN-SUFFIX,vapgfhsecbit.com,Reject
+DOMAIN-SUFFIX,vapourgrievously.com,Reject
 DOMAIN-SUFFIX,varylioness.com,Reject
 DOMAIN-SUFFIX,vasb.cn,Reject
 DOMAIN-SUFFIX,vasgenerete.site,Reject
@@ -15319,6 +15361,7 @@ DOMAIN-SUFFIX,wawpklaws.com,Reject
 DOMAIN-SUFFIX,wawyxzfkab.com,Reject
 DOMAIN-SUFFIX,waxpigbaa.com,Reject
 DOMAIN-SUFFIX,waxtamnit.com,Reject
+DOMAIN-SUFFIX,wayfarerspoutpraise.com,Reject
 DOMAIN-SUFFIX,waynagmay.com,Reject
 DOMAIN-SUFFIX,waypresentsstud.com,Reject
 DOMAIN-SUFFIX,waysinbeg.com,Reject
@@ -15529,6 +15572,7 @@ DOMAIN-SUFFIX,windoorsew.club,Reject
 DOMAIN-SUFFIX,windowmentaria.com,Reject
 DOMAIN-SUFFIX,windows-remora-system.com,Reject
 DOMAIN-SUFFIX,windowsxi.com,Reject
+DOMAIN-SUFFIX,winfreeprize.online,Reject
 DOMAIN-SUFFIX,winsistakesme.site,Reject
 DOMAIN-SUFFIX,winvestern.com.cn,Reject
 DOMAIN-SUFFIX,wipeneighbour.com,Reject
@@ -15577,7 +15621,6 @@ DOMAIN-SUFFIX,wlezfkwtv.com,Reject
 DOMAIN-SUFFIX,wlgkqespz.com,Reject
 DOMAIN-SUFFIX,wlkpa.cn,Reject
 DOMAIN-SUFFIX,wlnxskclqr.com,Reject
-DOMAIN-SUFFIX,wlpinnaclesports.eacdn.com,Reject
 DOMAIN-SUFFIX,wlrzptntiqez.com,Reject
 DOMAIN-SUFFIX,wlshotel.cn,Reject
 DOMAIN-SUFFIX,wlszodcfwqk.com,Reject
@@ -16197,7 +16240,6 @@ DOMAIN-SUFFIX,xuanmeiguoji.com,Reject
 DOMAIN-SUFFIX,xudfxpvm.com,Reject
 DOMAIN-SUFFIX,xue.zbyw.cn,Reject
 DOMAIN-SUFFIX,xuehelei.com,Reject
-DOMAIN-SUFFIX,xuehongxs.com,Reject
 DOMAIN-SUFFIX,xuexi.hydcd.com,Reject
 DOMAIN-SUFFIX,xueyanshan.com,Reject
 DOMAIN-SUFFIX,xueyongbao.com,Reject
@@ -16578,6 +16620,7 @@ DOMAIN-SUFFIX,youfumei.com,Reject
 DOMAIN-SUFFIX,youhm.cn,Reject
 DOMAIN-SUFFIX,youhuomeishi.com,Reject
 DOMAIN-SUFFIX,youkete.cn,Reject
+DOMAIN-SUFFIX,yourfreshposts.com,Reject
 DOMAIN-SUFFIX,yourwebbars.com,Reject
 DOMAIN-SUFFIX,yousee.com,Reject
 DOMAIN-SUFFIX,youshouge513.cn,Reject
@@ -16746,7 +16789,6 @@ DOMAIN-SUFFIX,yxvuvzrz.com,Reject
 DOMAIN-SUFFIX,yxxwyz.com,Reject
 DOMAIN-SUFFIX,yxyenzslsk.com,Reject
 DOMAIN-SUFFIX,yxyfsghyk.com,Reject
-DOMAIN-SUFFIX,yy1.fwccw.com,Reject
 DOMAIN-SUFFIX,yy58ju.com,Reject
 DOMAIN-SUFFIX,yy9s51b2u05z.com,Reject
 DOMAIN-SUFFIX,yybos.com.cn,Reject
@@ -16847,6 +16889,7 @@ DOMAIN-SUFFIX,zdjby.cn,Reject
 DOMAIN-SUFFIX,zdjkzqwpqvwcmc.com,Reject
 DOMAIN-SUFFIX,zdovrb.cn,Reject
 DOMAIN-SUFFIX,zdplhparvrd.com,Reject
+DOMAIN-SUFFIX,zdsfnagupwkztl.com,Reject
 DOMAIN-SUFFIX,zdsyifistjlag.com,Reject
 DOMAIN-SUFFIX,zdukhhodnglp.com,Reject
 DOMAIN-SUFFIX,zdutcdhvwlpkge.com,Reject
