--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -1,6 +1,6 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-12-07 06:25:53
+# build time: 2020-12-08 13:49:59
 
 [General]
 bypass-system = true
@@ -358,6 +358,9 @@ DOMAIN-SUFFIX,ieee.org,Direct
 DOMAIN-SUFFIX,nature.com,Direct
 DOMAIN-SUFFIX,osapublishing.org,Direct
 # extended
+DOMAIN-SUFFIX,icloud.com,Direct
+DOMAIN-SUFFIX,icloud.com.cn,Direct
+DOMAIN-SUFFIX,icloud-content.com,Direct
 DOMAIN-SUFFIX,douyin.com,Direct
 DOMAIN-SUFFIX,douyincdn.com,Direct
 DOMAIN-SUFFIX,meituan.com,Direct
@@ -500,8 +503,6 @@ DOMAIN-SUFFIX,blobstore.apple.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,music.apple.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mzstatic.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,itunes.apple.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,icloud.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,icloud-content.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,me.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mzstatic.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,akadns.net,Proxy,force-remote-dns
