--- a/sr_adb.conf
+++ b/sr_adb.conf
@@ -1,6 +1,6 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-12-08 13:57:37
+# build time: 2020-12-08 14:37:56
 
 [General]
 bypass-system = true
@@ -224,6 +224,7 @@ DOMAIN-SUFFIX,kikibt8.xyz,Reject
 # 手工定义的 Proxy 列表
 DOMAIN-SUFFIX,theinitium.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,youtu.be,Proxy,force-remote-dns
+DOMAIN-SUFFIX,youtube.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,netflix.com,Proxy,force-remote-dns
 #161 可能以后会和GFWList重复
 DOMAIN-SUFFIX,9gag.com,Proxy,force-remote-dns
@@ -382,7 +383,7 @@ DOMAIN-SUFFIX,matchvs.com,Direct
 DOMAIN-SUFFIX,servicewechat.com,Direct
 
 
-# adblock rules refresh time: 2020-12-08 13:57:34
+# adblock rules refresh time: 2020-12-08 14:37:53
 DOMAIN-SUFFIX,00-gov.cn,Reject
 DOMAIN-SUFFIX,000dn.com,Reject
 DOMAIN-SUFFIX,0024aaaa.com,Reject
