--- a/sr_top500_whitelist.conf
+++ b/sr_top500_whitelist.conf
@@ -1,6 +1,6 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-12-08 13:57:37
+# build time: 2020-12-08 14:37:56
 
 [General]
 bypass-system = true
@@ -392,6 +392,7 @@ IP-CIDR,127.0.0.0/8,DIRECT
 # 手工定义的 Proxy 列表
 DOMAIN-SUFFIX,theinitium.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,youtu.be,Proxy,force-remote-dns
+DOMAIN-SUFFIX,youtube.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,netflix.com,Proxy,force-remote-dns
 #161 可能以后会和GFWList重复
 DOMAIN-SUFFIX,9gag.com,Proxy,force-remote-dns
