--- a/sr_top500_whitelist_ad.conf
+++ b/sr_top500_whitelist_ad.conf
@@ -1,6 +1,6 @@
 # Best Shadowrocket Rules (https://github.com/h2y/Shadowrocket-ADBlock-Rules)
 # by Moshel
-# build time: 2020-12-08 13:57:37
+# build time: 2020-12-08 14:37:56
 
 [General]
 bypass-system = true
@@ -17,7 +17,7 @@ dns-server = 223.5.5.5:853,8.8.8.8:853
 #
 
 
-# adblock rules refresh time: 2020-12-08 13:57:34
+# adblock rules refresh time: 2020-12-08 14:37:53
 DOMAIN-SUFFIX,00-gov.cn,Reject
 DOMAIN-SUFFIX,000dn.com,Reject
 DOMAIN-SUFFIX,0024aaaa.com,Reject
@@ -17663,6 +17663,7 @@ IP-CIDR,127.0.0.0/8,DIRECT
 # 手工定义的 Proxy 列表
 DOMAIN-SUFFIX,theinitium.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,youtu.be,Proxy,force-remote-dns
+DOMAIN-SUFFIX,youtube.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,netflix.com,Proxy,force-remote-dns
 #161 可能以后会和GFWList重复
 DOMAIN-SUFFIX,9gag.com,Proxy,force-remote-dns
